--- a/TP-TDD-Bibliotheque/appsettings.json
+++ b/TP-TDD-Bibliotheque/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=host.docker.internal;Port=3306;Database=bibliotheque;User=api-biblio;Password=bibliothecaire"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
